<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_conversor"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.tobalsa.convertercoins.ConversorActivity"
    tools:showIn="@layout/activity_conversor">

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conversor_dolar_euro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/introduce_cantidad"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitulo" />

    <SeekBar
        android:id="@+id/sbCantidad"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginLeft="72dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="40dp"
        android:inputType="text"
        android:max="100"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/btnConvertir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="120dp"
        android:layout_marginStart="120dp"
        android:onClick="encriptar"
        android:text="@string/convertir"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="56dp"
        app:layout_constraintTop_toBottomOf="@+id/sbCantidad" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/resultado"
        app:layout_constraintTop_toBottomOf="@+id/btnConvertir"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/tvValor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="96dp"
        android:layout_marginStart="96dp"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="@+id/sbCantidad"
        app:layout_constraintTop_toBottomOf="@+id/sbCantidad" />

</android.support.constraint.ConstraintLayout>
